[project]
name = "handson-ml3"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "autopep8>=2.3.2",
    "beautifulsoup4>=4.13.4",
    "html5lib>=1.1",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "lxml>=5.4.0",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "openai>=1.82.1",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "plotly>=6.1.2",
    "pylint>=3.3.7",
    "python-app>=0.1",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "tensorflow>=2.19.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "wheel>=0.45.1",
    "xgboost>=3.0.2",
]
